# DevIconsLatex

./: .gitmodules  README.md  compile.py  devicons.sty  pyproject.toml
