[tool.poetry]
name = "deviconslatex"
version = "0.1.0"
description = "Generates a STY file for LaTeX using the devicons project"
authors = ["Jeppe Klitgaard <hi@jeppe.science>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]
black = {version = "^21.9b0", allow-prereleases = true}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
